add toggle button & main.js

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <script src="main.js" defer></script>
 </head>
 
 <body>
@@ -32,6 +33,10 @@
             <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
             <input type="text" placeholder="Search">
         </div>
+
+        <a href="" class="navbar__toggle">
+            <i class="fa-solid fa-bars"></i>
+        </a>
     </nav>
 
     <main>
