--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <input type="text" placeholder="Search">
         </div>
 
-        <a href="" class="navbar__toggle">
+        <a href="#" class="navbar__toggle">
             <i class="fa-solid fa-bars"></i>
         </a>
     </nav>
